@@ -24,6 +24,7 @@ import org.globus.cog.abstraction.impl.common.task.InvalidSecurityContextExcepti
 import org.globus.cog.abstraction.impl.common.task.TaskSubmissionException;
 import org.globus.cog.abstraction.impl.file.DirectoryNotFoundException;
 import org.globus.cog.abstraction.impl.file.FileNotFoundException;
+import org.globus.cog.abstraction.impl.file.FileResourceUtil;
 import org.globus.cog.abstraction.impl.file.GeneralException;
 import org.globus.cog.abstraction.impl.file.GridFileImpl;
 import org.globus.cog.abstraction.impl.file.IllegalHostException;
@@ -209,11 +210,15 @@ public class FileResourceImpl implements FileResource {
             String currentPath = getCurrentDirectory();
             this.resource = new File(resolveName(directory));
             resource.mkdir();
-            setCurrentDirectory(currentPath);
+            setCurrentDirectory(currentPath);//[m] ???
         } catch (Exception e) {
             throw new GeneralException("Could not create directory: "
                     + directory);
         }
+    }
+    
+    public void createDirectories(String directory) throws GeneralException {
+        FileResourceUtil.createDirectories(this, directory);
     }
 
     /** delete the given directory. If force == true, recursive delete */
